<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/payment_details"
        android:background="@color/contentBack"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/search_by"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/serchby"
            android:textStyle="bold"
            android:background="@drawable/head_back"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/text12"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/L_layout2"
            android:layout_below="@+id/search_by"
            android:orientation="horizontal"
            >

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/spinnerItems"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                />

            <EditText
                android:id="@+id/edt_search_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/txt_search"
                android:ems="10"
                android:textAlignment="center"
                android:background="@drawable/edittext_style"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                />
        </LinearLayout>

        <Button
            android:id="@+id/btn_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_back"
            android:layout_below="@id/L_layout2"
            android:text="@string/btn_go"
            android:textColor="@color/white"
            android:layout_centerInParent="true"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            />
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/tableLayout"
            android:layout_below="@+id/btn_search"
            android:padding="@dimen/margin10"
            android:stretchColumns="2">


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                >

                <TextView
                    android:text="@string/targettxt"
                    android:textSize="@dimen/text12"
                    android:layout_weight="1"
                    />

                <TextView
                    android:text="@string/target"
                    android:textSize="@dimen/text12"
                    android:layout_weight="1"
                    />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <TextView
                    android:text="@string/paymenrcvttxt"
                    android:textSize="@dimen/text12"
                    android:layout_weight="1"/>

                <TextView
                    android:text="@string/paymentrcv"
                    android:textSize="@dimen/text12"
                    android:layout_weight="1"
                    />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <TextView
                    android:text="@string/paidsbtxt"
                    android:textSize="@dimen/text12"
                    android:layout_weight="1"
                    />

                <TextView
                    android:text="@string/paidsb"
                    android:textSize="@dimen/text12"
                    android:layout_weight="1"
                    />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <TextView
                    android:text="@string/unpaidsbtxt"
                    android:textSize="@dimen/text12"
                    android:layout_weight="1"
                    />

                <TextView
                    android:text="@string/unpaidsb"
                    android:textSize="@dimen/text12"
                    android:layout_weight="1"
                    />
            </TableRow>
        </TableLayout>
    </RelativeLayout>
</LinearLayout>