<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:xlns="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EEEFF5"
        android:id="@+id/landing_page1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/amount_details"
            android:background="@color/contentBack"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/amountdetails"
                android:textStyle="bold"
                android:background="@drawable/head_back"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/text12"/>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:id="@+id/tableLayout"
                android:padding="@dimen/margin10"
                android:stretchColumns="2">


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:background="@color/white"

                    >

                    <TextView
                        android:text="@string/targettxt"
                        android:textSize="@dimen/text12"
                        android:layout_weight="1"
                        />

                    <TextView
                        android:text="@string/target"
                        android:textSize="@dimen/text12"
                        android:layout_weight="1"
                        />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:background="#F6F6F6"
                    >
                    <TextView
                        android:text="@string/paymenrcvttxt"
                        android:textSize="@dimen/text12"
                        android:layout_weight="1"/>

                    <TextView
                        android:text="@string/paymentrcv"
                        android:textSize="@dimen/text12"
                        android:layout_weight="1"
                        />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:background="@color/white"
                    >
                    <TextView
                        android:text="@string/paidsbtxt"
                        android:textSize="@dimen/text12"
                        android:layout_weight="1"
                        />

                    <TextView
                        android:text="@string/paidsb"
                        android:textSize="@dimen/text12"
                        android:layout_weight="1"
                        />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">
                    <TextView
                        android:text="@string/unpaidsbtxt"
                        android:textSize="@dimen/text12"
                        android:layout_weight="1"
                        />

                    <TextView
                        android:text="@string/unpaidsb"
                        android:textSize="@dimen/text12"
                        android:layout_weight="1"
                        />
                </TableRow>
            </TableLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/pending_amount"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/contentBack"
            android:layout_weight="1"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pendingamounttxt"
                android:textStyle="bold"
                android:background="@drawable/head_back"
                android:gravity="center"
                android:textSize="@dimen/text12"
                android:textColor="@color/white"
                android:id="@+id/textView" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin10"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:textSize="@dimen/heading18"
                android:text="@string/pendingamount" />
        </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_back"
        android:text="@string/next"
        android:textColor="@color/white"
        android:layout_gravity="right"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        />
    </LinearLayout>
</ScrollView>